--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -37,11 +37,11 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-5">
+                 <div class="col-sm-5">
                     <div class="social-icons pull-right">
                         <ul class="nav navbar-nav">
                         <% if(token && welcomeTip && welcomeTip != 'undefined'){ %>
-                            <li><marquee style="font-size:14px; margin-top: 5px"><i class="fa "></i> <%=welcomeTip%> </marquee></li>
+                            <li><marquee class="welcome-tip"><i class="fa "></i> <%=welcomeTip%> </marquee></li>
                        	<% } %>
                             
                           </ul>
@@ -56,7 +56,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="logo pull-left">
-                        <a href="/home"><img src="/images/home/logo.png" alt="" /></a>
+                        <a href="/home"><img src="/images/monk.jpeg" alt="" /></a>
                     </div>
                 </div>
                 
